UI: add Notes fragment and Note entity

--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -1,94 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:gravity="center"
-	android:orientation="vertical"
-	android:paddingStart="16dp"
-	android:paddingEnd="16dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp">
 
-	<ImageView
-		android:layout_width="144dp"
-		android:layout_height="144dp"
-		android:layout_marginBottom="16dp"
-		android:src="@drawable/splash" />
+    <ImageView
+        android:layout_width="144dp"
+        android:layout_height="144dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/splash" />
 
-	<com.google.android.material.textfield.TextInputLayout
-		android:id="@+id/usernameContainer"
-		android:layout_width="match_parent"
-		android:layout_height="56dp"
-		android:layout_marginBottom="8dp"
-		app:errorEnabled="true"
-		app:hintEnabled="false">
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/usernameContainer"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_marginBottom="8dp"
+        app:errorEnabled="true"
+        app:hintEnabled="false">
 
-		<com.google.android.material.textfield.TextInputEditText
-			android:id="@+id/usernameEditText"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:background="@drawable/background_input_round"
-			android:hint="@string/username"
-			android:paddingStart="16dp"
-			android:paddingEnd="16dp" />
-	</com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/usernameEditText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/background_input_round"
+            android:hint="@string/username"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-	<com.google.android.material.textfield.TextInputLayout
-		android:id="@+id/passwordContainer"
-		android:layout_width="match_parent"
-		android:layout_height="56dp"
-		android:layout_marginBottom="16dp"
-		app:errorEnabled="true"
-		app:hintEnabled="false"
-		app:passwordToggleEnabled="true">
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/passwordContainer"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_marginBottom="16dp"
+        app:errorEnabled="true"
+        app:hintEnabled="false"
+        app:passwordToggleEnabled="true">
 
-		<com.google.android.material.textfield.TextInputEditText
-			android:id="@+id/passwordEditText"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:background="@drawable/background_input_round"
-			android:hint="@string/password"
-			android:inputType="textPassword"
-			android:paddingStart="16dp"
-			android:paddingEnd="16dp" />
-	</com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/passwordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/background_input_round"
+            android:hint="@string/password"
+            android:inputType="textPassword"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-	<LinearLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_marginBottom="40dp"
-		android:clipChildren="false"
-		android:clipToPadding="false"
-		android:gravity="center"
-		android:orientation="horizontal">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:gravity="center"
+        android:orientation="horizontal">
 
-		<Button
-			android:id="@+id/signUpButton"
-			android:layout_width="160dp"
-			android:layout_height="56dp"
-			android:background="@drawable/background_input_round"
-			android:text="@string/sign_up" />
+        <Button
+            android:id="@+id/signUpButton"
+            android:layout_width="160dp"
+            android:layout_height="56dp"
+            android:background="@drawable/background_input_round"
+            android:text="@string/sign_up" />
 
-		<View
-			android:layout_width="0dp"
-			android:layout_height="0dp"
-			android:layout_weight="1" />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
-		<Button
-			android:id="@+id/signInButton"
-			android:layout_width="160dp"
-			android:layout_height="56dp"
-			android:textColor="@color/colorBackground"
-			android:background="@drawable/background_button_round"
-			android:text="@string/sign_in" />
-	</LinearLayout>
+        <Button
+            android:id="@+id/signInButton"
+            android:layout_width="160dp"
+            android:layout_height="56dp"
+            android:background="@drawable/background_button_round"
+            android:text="@string/sign_in"
+            android:textColor="@color/colorBackground" />
+    </LinearLayout>
 
-	<TextView
-		android:id="@+id/skipButton"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:clickable="true"
-		android:drawableEnd="@drawable/ic_skip"
-		android:focusable="true"
-		android:text="@string/skip"
-		android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
+    <TextView
+        android:id="@+id/skipButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:drawableEnd="@drawable/ic_skip"
+        android:focusable="true"
+        android:text="@string/skip"
+        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
 </LinearLayout>
